# super-hero

./: .env  .gitignore  README.md  conftest.py  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 6f74f3ff68cd_create_tables_heros.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
src/app/: _helpers.py  routers.py
src/config/: settings.py
src/db/: data_base.py  init_db.py  models.py
src/frontend/: index.html  style.css
src/helpers/: models.py  static_content.py
src/utils/: custom_logger.py
tests/: test_api.py  test_unit.py
